fixed overflow issue in auth page

--- a/src/Components/Auth/auth.module.scss
+++ b/src/Components/Auth/auth.module.scss
@@ -1,6 +1,6 @@
 .authWrapper {
   height: 88vh;
-  width: 100vw;
+  
   display: flex;
   flex-direction: column;
   justify-content: space-around;
